Added new pages and design changes

--- a/Angular/src/app/footer/footer.component.html
+++ b/Angular/src/app/footer/footer.component.html
@@ -97,12 +97,8 @@
                             <div class="footer-widget links-widget">
                                 <h5>Company</h5>
                                 <ul class="list-link">
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Team</a></li>
-                                    <li><a href="#">Careers</a></li>
-                                    <li><a href="#">Investors</a></li>
-                                    <li><a href="#">Contact Us</a></li>
-                                    <li><a href="#">Offices</a></li>
+                                    <li><a href="javascript:void(0)" (click)="onRouterNavigate('/about')">About Us</a></li>
+                                    <li><a href="javascript:void(0)" (click)="onRouterNavigate('/contact')">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -119,10 +115,7 @@
                             <div class="footer-widget links-widget">
                                 <h5>Quick Links</h5>
                                 <ul class="list-link">
-                                    <li><a href="#">FAQS</a></li>
-                                    <li><a href="#">Support</a></li>
-                                    <li><a href="#">Sitemap</a></li>
-                                    <li><a href="#">Community</a></li>
+                                    <li><a href="javascript:void(0)" (click)="onRouterNavigate('/termsconditions')">Terms and conditions</a></li>
                                 </ul>
                             </div>
                         </div>
