--- a/Angular/src/app/header/header.component.html
+++ b/Angular/src/app/header/header.component.html
@@ -230,9 +230,9 @@
                     </li>
                   </ul>
                 </li>
-                <li><a href="javascript:void(0)">About</a></li>
+                <li><a href="javascript:void(0)" (click)="onRouterNavigate('/about')">About</a></li>
 
-                <li><a href="javascript:void(0)">Contact</a></li>
+                <li><a href="javascript:void(0)" (click)="onRouterNavigate('/contact')">Contact</a></li>
               </ul>
             </div>
           </nav>
