--- a/Angular/src/app/main/new-home/new-home.component.html
+++ b/Angular/src/app/main/new-home/new-home.component.html
@@ -1,8 +1,76 @@
 <div class="page-wrapper">
-    <!-- Banner Section -->
+    <div class="banner-section">
+        <div>
+            <div class="image">
+                <img src="../../../assets/images/main-slider/banner1.jpg" alt="" />
+                <!-- <div class="content-column col-lg-7 col-md-12 col-sm-12">
+                    <div class="inner-column">
+                        <div class="title">Income Tax filing</div>
+                        <h1>Get your Income-tax return filed by our <span>tax experts</span></h1>
+                        <div class="text"><b>Data Security and confidentiality is our priority</b><br> Get
+                            your
+                            personal tax expert to do tax filing for you. And it is personal, convenient &
+                            fast with maximum refund calculated for you. Let we handle Your total Tax &
+                            Business Compliance.</div>
+                        <div class="btn-box">
+                            <a href="about.html" class="theme-btn btn-style-one"><span class="txt">Work With
+                                    Us</span></a>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
 
-    <!-- End Banner Section -->
+            <!-- <div class="slide" data-bg-image="images/main-slider/banner2.jpg">
+                <div class="auto-container w-100">
+                    <div class="row clearfix"> -->
 
+                        <!-- Content Column -->
+                        <!-- <div class="content-column col-lg-7 col-md-12 col-sm-12">
+                            <div class="inner-column">
+                                <div class="title">GST Return filing</div>
+                                <h1>Get all your GST compliances return filed by our <span>tax experts</span></h1>
+                                <div class="text"><b>Data Security and confidentiality is our priority</b><br>GST
+                                    Filing Service Plans, Best & Lowest Pricing depends on the type of business like
+                                    regular, composition, and the number of computerized transactions in your
+                                    business per month. We provide expert assisted GST filing plans & pricing are
+                                    affordable & customizable per SME businesses</div>
+                                <div class="btn-box">
+                                    <a href="about.html" class="theme-btn btn-style-one"><span class="txt">Work With
+                                            Us</span></a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div> -->
+<!-- 
+            <div class="slide" data-bg-image="images/main-slider/banner3.jpg">
+                <div class="auto-container w-100">
+                    <div class="row clearfix">
+
+                    
+                        <div class="content-column col-lg-7 col-md-12 col-sm-12">
+                            <div class="inner-column">
+                                <div class="title">GST Registration</div>
+                                <h1>Start your dream by obtaining Business <span>GST registration</span></h1>
+                                <div class="text"><b>GST registration</b>We provide the New GST Registration by
+                                    Online Document Uploading & Tracking. File your GST Application in 24 hours and
+                                    Get Your TRN on same day. GST Registration and Follow-up is also provided.</div>
+                                <div class="btn-box">
+                                    <a href="about.html" class="theme-btn btn-style-one"><span class="txt">Work With
+                                            Us</span></a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div> -->
+        </div>
+    </div>
     <!-- CTA Section Start -->
     <div class="cta-section" data-bg-image="../../../assets/images/gallery/2.jpg">
         <div class="auto-container">
