--- a/Angular/src/assets/css/main.css
+++ b/Angular/src/assets/css/main.css
@@ -3622,10 +3622,10 @@ img{
 
 .service-banner-section .content-box{
 	position:relative;
-	max-width:530px;
+	max-width:100%;
 	z-index:1;
-	padding-top:100px;
-	padding-bottom:80px;
+	padding-top: 50px;
+	padding-bottom: 40px;
 }
 
 .service-banner-section .content-box h2{
@@ -3644,16 +3644,16 @@ img{
 
 .service-banner-section .content-box .text{
 	position:relative;
-	color:#666666;
+	color:#000;
 	font-size:18px;
 	line-height:1.7em;
 	margin-top:30px;
-	margin-bottom:90px;
+	margin-bottom:40px;
 }
 
 .service-banner-section .content-box .lower-box{
 	position:relative;
-	margin-top:140px;
+	margin-top: 80px;
 }
 
 .service-banner-section .content-box .lower-box .book{
